--- a/style.css
+++ b/style.css
@@ -83,14 +83,15 @@ header {
 /************************************************************/
 
 /*hamburger */
-.Hamburger {
-  margin-left: 65%;
+.hamburger {
+  margin-left: 83%;
+  margin-top: 1%;
   position: fixed;
   z-index: 51;
 }
 
 @media (min-width: 610px) {
-  .Hamburger  {
+  .hamburger  {
     display: none;
   }
 }
@@ -103,19 +104,19 @@ header {
   background-color: var(--hamburger);
 }
 
-.Hamburger:active div:first-child {
+.hamburger:active div:first-child {
   transform: translateY(15px) translateX(-5px) rotate(45deg);
 }
 
-.Hamburger:active div:nth-child(2) {
+.hamburger:active div:nth-child(2) {
   transform: translateX(10px) rotate(-45deg);
 }
 
-.Hamburger:active div:last-child {
+.hamburger:active div:last-child {
   transform: translateY(-15px) translateX(10px) rotate(-45deg);
 }
 
-.Hamburger:active div {
+.hamburger:active div {
   aspect-ratio: 3/1;
 }
 
@@ -191,7 +192,7 @@ header {
 /**************************************************/
 
 /*křížek*/
-.Cross-red {
+.cross-red {
   margin-left: 270%;
   margin-bottom: 100%;
   margin-top: 10%;
@@ -202,7 +203,7 @@ header {
 *******************************************************/
 
 /**** dark mode */
-.Darkmode-div {
+.darkmode-div {
   position: fixed;
   display: flex;
   margin-top: 10px;
@@ -211,7 +212,7 @@ header {
 }
 
 /* checkbox **/
-.Darkmode-input {
+.darkmode-input {
   margin-right: 5px;
   height: 50px;
   width: 50px;
@@ -219,14 +220,14 @@ header {
 
 /***********/
 /*label k checkboxu*/
-.Darkmode-label {
+.darkmode-label {
   margin-top: 4%;
   color: var(--menu-text-color);
   font-size: 29px;
   font-family: sans-serif;
 }
 
-.Darkmode-label::before {
+.darkmode-label::before {
   content: "";
   width: 100%;
   height: 100%;
@@ -445,7 +446,7 @@ nav ul li a::before {
 }
 
 /*Přihlásit tlačítko*/
-#Login {
+.log-in {
   font-weight: bold;
   font-size: 1.8em;
 }
