--- a/style.css
+++ b/style.css
@@ -12,14 +12,19 @@
   --darMode_text: #fff;
   --menu_background: rgba(67, 67, 87, 0.7);
   --menu-text-color: rgb(255, 247, 247);
-  --background-gradient:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));
-  --warning-color:red;
+  --background-gradient: linear-gradient(
+    rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.5)
+  );
+  --warning-color: red;
   /* menu*/
   --menu-color: rgba(0, 0, 0, 0.7);
   --border-color-menu: #dc4f00;
-  --podsviceni: radial-gradient(circle farthest-corner at 10% 20%,
-      rgba(255, 94, 247, 1) 17.8%,
-      rgba(2, 245, 255, 1) 100.2%);
+  --podsviceni: radial-gradient(
+    circle farthest-corner at 10% 20%,
+    rgba(255, 94, 247, 1) 17.8%,
+    rgba(2, 245, 255, 1) 100.2%
+  );
   /*hamburger*/
   --hamburger: rgb(20, 20, 180);
 }
@@ -39,8 +44,7 @@ body {
 }
 
 header {
-  background: var(--background-gradient),
-    url(./img/img_4.jpg);
+  background: var(--background-gradient), url(./img/img_4.jpg);
 }
 
 .dark-mode {
@@ -91,7 +95,7 @@ header {
 }
 
 @media (min-width: 610px) {
-  .hamburger  {
+  .hamburger {
     display: none;
   }
 }
@@ -287,7 +291,7 @@ nav ul li a::after {
   bottom: 0;
   width: 0;
   height: 2px;
-  background-color: var(--border-color-menu);  
+  background-color: var(--border-color-menu);
   transition: width 2.5s;
   z-index: 1;
 }
@@ -337,7 +341,7 @@ nav ul li a::before {
 /**** obrázky v galerii */
 .picture-gallery {
   display: flex;
-  justify-content: space-evenly;  
+  justify-content: space-evenly;
 }
 
 .picture-gallery img {
@@ -413,7 +417,7 @@ nav ul li a::before {
 }
 
 /*div pod loginem*/
-.fomular {  
+.fomular {
   width: 100%;
   height: 100%;
   padding: 40px;
@@ -480,7 +484,6 @@ nav ul li a::before {
 
 /*Sekce kotakt*/
 .contact {
-
   line-height: 1.5;
   background: var(--background-gradient), url(./img/img_4.jpg);
 
@@ -496,16 +499,12 @@ nav ul li a::before {
   list-style-type: none;
   margin-left: 10%;
   font-size: 1.8em;
-
 }
 
 .contact ul li a {
   text-decoration: none;
   color: var(--darMode_text);
-
 }
-
-
 
 /************ footer **************/
 
@@ -523,11 +522,10 @@ footer {
   position: relative;
   color: var(--darMode_text);
   z-index: 2;
-} 
+}
 
-.facebook-anchor:hover{ 
-  cursor: pointer; 
-  
+.facebook-anchor:hover {
+  cursor: pointer;
 }
 
 .footer-p::before {
