--- a/queries/queries.css
+++ b/queries/queries.css
@@ -50,7 +50,7 @@
 /**** pro mobil ******/
 
 @media only screen and (max-width: 600px) {
-  nav ul li a {
+  .main-menu ul li a {
     display: none;
   }  
 
