--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
 /*************************************************
 *****  Barvičky a velikosti               
 */
@@ -24,6 +18,13 @@
   --hamburger: rgb(20, 20, 180);
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+
 .none {
   display: none;
 }
@@ -35,7 +36,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   font-family: sans-serif;
-  transition: background-color 0.3s, color 0.3s;
+  transition: background-color 0.5s, color 0.5s;
 }
 
 header {
@@ -123,7 +124,12 @@ header {
 /**************************************************************************************
 ***************************************************************************************/
 
-/*hamburger menu */
+/*hamburger menu */ 
+.mobile-background {  
+  display: flex; 
+  flex-direction: column;
+  z-index: -1;
+}
 
 /* div s menu */
 .mobile-nav-background {
@@ -196,7 +202,8 @@ header {
   margin-left: 270%;
   margin-bottom: 100%;
   margin-top: 10%;
-  width: 30%;
+  width: 30%; 
+  z-index: 9999999;
 }
 
 /*******************************************************
