--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  font-family: sans-serif;
+  font-family: Roboto, sans-serif;
   transition: background-color 0.5s, color 0.5s;
 }
 
@@ -234,8 +234,7 @@ header {
 .darkmode-label {
   margin-top: 4%;
   color: var(--menu-text-color);
-  font-size: 29px;
-  font-family: sans-serif;
+  font-size: 29px;  
 }
 
 .darkmode-label::before {
@@ -281,8 +280,7 @@ nav ul li a:visited {
   color: var(--menu-text-color);
   text-decoration: none;
   border-bottom: 2px solid transparent;
-  position: relative;
-  font-family: serif;
+  position: relative;  
 }
 
 nav ul li a:hover,
