--- a/queries/queries.css
+++ b/queries/queries.css
@@ -1,4 +1,32 @@
-/************** tablety **************/
+@media (max-width: 1200px) {
+    .section-two {
+        flex-direction: column;
+        justify-content: center;
+        .my-description {
+            /*o mě povídání*/
+            margin: 0 auto;
+            width: 90%;
+        }
+    }
+    .login-section {
+        width: 90%;
+        margin: 0 auto;
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
+    .fomular {
+        margin-top: 0; 
+        width: 100%;
+    height: 100%;
+    }
+}
+
+/************** tablety **************/ 
+@media only screen and (max-width: 940px){ 
+  nav ul{ 
+    text-align: end;
+  }
+}
 
 @media only screen and (max-width: 820px) {
   .section .picture-gallery {
@@ -41,13 +69,24 @@
       margin-top: 10px;
     }
   }
-  .arrow-up {
-    top: 94%;
-    left: 3%;
+  .arrow-up {    
+    height: 35px;  
+    width: 100%;  
+  } 
+  .arrow-up-img {
+    height: 35px;
+    width: 35px;
   }
 }
 
-/**** pro mobil ******/
+/**** pro mobil ******/ 
+@media only screen and (max-width: 730px) {
+  nav ul {
+    display: none;
+  }
+
+ 
+}
 
 @media only screen and (max-width: 600px) {
   .main-menu ul li a {
