--- a/style.css
+++ b/style.css
@@ -51,6 +51,34 @@ header {
 .dark-mode {
     background-color: var(--dark_mode);
     color: var(--darMode_text);
+} 
+/* skrolující smajlík ***/
+.scroll-image {
+    display: none;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 100px;
+    height: 100px;
+    transition: transform 0.3s linear; 
+    z-index: 99999999999999999999999999999;
+}
+@keyframes rotate-left {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(-360deg);
+    }
+}
+
+@keyframes rotate-right {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 /***********************************************/
@@ -476,7 +504,8 @@ nav ul li a::before {
 }
 
 .log-in:hover {
-    cursor: pointer; 
+    cursor: pointer;  
+    color: var(--menu-text-color);
     background: var(--menu_background);
 }
 /************************************
