--- a/queries/queries.css
+++ b/queries/queries.css
@@ -15,89 +15,93 @@
         margin-top: 10px;
     }
     .fomular {
-        margin-top: 0; 
+        margin-top: 0;
         width: 100%;
-    height: 100%;
+        height: 100%;
+    }
+    .loader {
+        width: 150px;
     }
 }
 
-/************** tablety **************/ 
-@media only screen and (max-width: 940px){ 
-  nav ul{ 
-    text-align: end;
-  }
+/************** tablety **************/
+@media only screen and (max-width: 940px) {
+    nav ul {
+        text-align: end;
+    }
 }
 
 @media only screen and (max-width: 820px) {
-  .section .picture-gallery {
-    display: block;
-  }
-  .hamburger {
-    margin-top: 10px;
-    margin-left: 80%;
-  }
-  .picture-gallery img {
-    display: block;
-    margin: 0 auto;
-    width: 90%;
-    height: 550px;
-    margin-bottom: 5px;
-  }
-  .section-two {
-    /* o mě sekce*/
-    flex-direction: column;
-    justify-content: center;
-
-    .my-description {
-      /*o mě povídání*/
-      margin: 0 auto;
-      width: 90%;
+    .section .picture-gallery {
+        display: block;
     }
-  }
-  .login-section {
-    width: 90%;
-    margin: 0 auto;
-    margin-bottom: 10px;
-    margin-top: 10px;
-  }
-
-  .welcoming-text {
-    font-size: 1em;
-    letter-spacing: 1px;
-
-    p {
-      margin-top: 10px;
+    .hamburger {
+        margin-top: 10px;
+        margin-left: 80%;
     }
-  }
-  .arrow-up {    
-    height: 35px;  
-    width: 100%;  
-  } 
-  .arrow-up-img {
-    height: 35px;
-    width: 35px;
-  }
+    .picture-gallery img {
+        display: block;
+        margin: 0 auto;
+        width: 90%;
+        height: 550px;
+        margin-bottom: 5px;
+    }
+    .section-two {
+        /* o mě sekce*/
+        flex-direction: column;
+        justify-content: center;
+
+        .my-description {
+            /*o mě povídání*/
+            margin: 0 auto;
+            width: 90%;
+        }
+    }
+    .login-section {
+        width: 90%;
+        margin: 0 auto;
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
+
+    .welcoming-text {
+        font-size: 1em;
+        letter-spacing: 1px;
+
+        p {
+            margin-top: 10px;
+        }
+    }
+    .arrow-up {
+        height: 35px;
+        width: 100%;
+    }
+    .arrow-up-img {
+        height: 35px;
+        width: 35px;
+    }
 }
 
-/**** pro mobil ******/ 
+/**** pro mobil ******/
 @media only screen and (max-width: 730px) {
-  nav ul {
-    display: none;
-  }
-
- 
+    nav ul {
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 600px) {
-  .main-menu ul li a {
-    display: none;
-  }
+    .main-menu ul li a {
+        display: none;
+    }
+    .block-text {
+        text-align: center;
+    }
 
-  .picture-gallery img {
-    height: 350px;
-  }
+    .picture-gallery img {
+        height: 350px;
+    }
 
-  .contact ul {
-    font-size: 1.4em;
-  }
+    .contact ul {
+        font-size: 1.4em;
+    }
 }
